# chip8-interpreter

./: .gitignore  CMakeLists.txt  README.md  main.c
games/: README.md
include/: application.h  chip8.h  common.h  configHandler.h  cpu.h  display.h  fontdata.h  input.h  instructions.h  loadgame.h  main.h  menu.h  timer.h
lib/retrofont/: README.md
lib/retrofont/include/: RetroFont.h
src/: application.c  chip8.c  configHandler.c  cpu.c  display.c  fontdata.c  input.c  instructions.c  loadgame.c  main.c  menu.c
